fix: z-index, `Tooltip`

--- a/src/index.css
+++ b/src/index.css
@@ -105,21 +105,25 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.backdrop {
+  @apply fixed inset-0 bg-inverted/90;
+}
+
 /* z-index */
 .modal {
   @apply z-40;
 }
+.backdrop,
+.backdrop + div {
+  @apply z-30;
+}
 .popover-panel {
-  @apply z-40;
-}
-.backdrop {
-  @apply z-40;
-  @apply fixed inset-0 bg-inverted/90;
-}
-.tooltip {
   @apply z-20;
 }
 .select ul[role='listbox'],
 .dropdown [role='menu'] {
+  @apply z-10;
+}
+.tooltip .react-tooltip {
   @apply z-10;
 }
